# MetaAction

./: .env  .pre-commit-config.yaml  README.md  ai_go.py  pyproject.toml  requirements.txt  sans_env.py  setup.py
core/: message.py  providers.py
interface/: aliyun.py
meta_action/: config.py
meta_action/extensions/: alibaba_deepseekV3_llm_api.py  google_custom_search.py
meta_action/roles/: deep_search.py
simplemetagpt/core/: llm.py  pipe.py
simplemetagpt/roles/: team_leader.py
test/simplemetagpt/core/: test_llm.py
